4th-year/compiler-construction/compiler-construction-assignment-1/tests/negative-tests/using-keywords-as-variables.ccl
main
{
    // should produce errors:
    var return:integer;

    return = 5;
}